# tokentrkr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-DEJAVU.txt  README.md  justfile  tokentrkr.desktop
docs/: ARCHITECTURE.md  release-ledger.md
docs/correctness/releases/: 2026-05-17_001_token-refresh-429-gating.md  2026-05-17_002_usage-service-extraction.md  2026-05-17_003_usage-leak-and-empty-classification.md  2026-05-17_004_usage-rerun-stuck-spinner-and-test-fragility.md  2026-05-23_001_reset-time-local-timezone.md  2026-07-05_001_credentials-toctou-guard.md  2026-07-05_002_retry-after-propagation.md  2026-07-05_003_state-ui-completeness.md  2026-07-05_004_core-housekeeping.md  2026-07-05_005_fable-scoped-limits.md  2026-07-05_006_chart-smoothing.md  2026-07-11_001_applet-hardening.md
docs/portability/releases/: 2026-05-17_001_memory-optimization.md
resources/: com.github.goldengod503.TokenTrkr.desktop
src/: claude.rs  config.rs  cosmic_app.rs  history.rs  icon.rs  main.rs  models.rs  polling.rs  provider.rs  tray.rs
src/usage/: event.rs  mod.rs  retry.rs  service.rs
